readme++ and tweaks to spark presentation

--- a/README
+++ b/README
@@ -3,3 +3,35 @@ Slides of Jeroen De Dauw [0] for SMWCon [1] using DZSlides[2].
 [0] http://www.mediawiki.org/wiki/User:Jeroen_De_Dauw
 [1] http://semantic-mediawiki.org/wiki/SMWCon
 [2] http://paulrouget.com/dzslides
+
+
+== Presentations ==
+
+Note that these presentations are not designed for after-talk usage.
+However, they are usefull when watching the recording of a talk.
+
+=== Watching structured data ===
+
+A short (15 min talk) introduction to the Semantic Watchlist extension.
+
+Presented by Jeroen De Dauw at SMWCon Fall 2011, September 2011, Berlin.
+
+View at: http://ext.bn2vs.com/smwcon/swl/
+
+=== The future of SMW visualizations ===
+
+Some ideas on how the semantic result formats can be improved,
+and what tools can be utilized for this. (5 min lightning talk)  
+
+Presented by Jeroen De Dauw at SMWCon Fall 2011, September 2011, Berlin.
+
+View at: http://ext.bn2vs.com/smwcon/spark/
+
+=== Semantic Maps ===
+
+A short overview of what's new and upcomming in Maps and Semantic Maps.
+(5 min lightning talk)
+
+Presented by Jeroen De Dauw at SMWCon Fall 2011, September 2011, Berlin.
+
+View at: http://ext.bn2vs.com/smwcon/maps/
